# art-mlx

./: .gitignore  .pre-commit-config.yaml  README-MLX.md  README.md  pyproject.toml  review_findings.md  skypilot-config.yaml
.github/: CODEOWNERS
.github/workflows/: build-gpu-image.yml  package-install.yml  pages.yml  prek.yml  release.yml  trainer-rank-gpu.yml
dev/: bench_cute_grouped_lora.py  pipeline_localbackend_artifact_yes_no_maybe.py  run_pipeline_localbackend_artifact_yes_no_maybe.py  run_qwen3_5_localbackend_yes_no_maybe.py  run_qwen3_5_megatron_yes_no_maybe.py  tau-bench-minimal.py  trainer_rank.py  trainer_rank_check.py  trainer_rank_fast_check.py  trainer_rank_parity_probe.py  trainer_rank_perf.py  trainer_rank_review_perf.py  trainer_rank_support.py  trainer_rank_topology_check.py  yes-no-maybe-fork-pipeline.py  yes-no-maybe-fork-pipeline.sky.yaml  yes-no-maybe-fork.py  yes-no-maybe-fork.sky.yaml  yes-no-maybe-kl-advantage.py  yes-no-maybe-local-backend.py  yes-no-maybe-megatron.py  yes-no-maybe-tinker.py  yes_no_maybe_trainability.py
dev/sft/: sft-from-file.py  sft-warmup.py
docker/: art-gpu.Dockerfile
docs/: CNAME  index.html  mlx-business-examples.html  mlx-tictactoe-results.html
docs/integrations/: langgraph-integration.mdx
docs/proposals/: vllm-runtime-packaging.md
examples/: mlx_2048.py  mlx_quicktest.py  mlx_tictactoe.py
examples/industry/: README.md  code_review_agent.py  email_support_agent.py  sql_assistant.py
examples/skill-rl/: README.md  train_skill.py
requirements/: backend.vcs.txt
scratch/: model_support_review_followup_2026_04_15.md
scripts/: art_megatron_setup.sh  build-gpu-image.sh  build_package.py  bump_version.py  publish.sh  setup.sh
scripts/ci/: build_and_push_uv_cache.sh  compute_uv_fingerprint.py  trainer-rank-gpu-tests.sh  trainer-rank-gpu.sky.yaml
src/art/: __init__.py  _backend_training.py  auto_trajectory.py  cli.py  costs.py  errors.py  guided_completion.py  loss.py  metrics_taxonomy.py  model.py  openai.py  types.py  vllm_runtime.py
src/art/dev/: __init__.py  engine.py  get_model_config.py  model.py  sequence_lengths.py  train.py  validate.py
src/art/langgraph/: llm_wrapper.py  logging.py
src/art/local/: adapter_leases.py  backend.py  service.py
src/art/megatron/: __init__.py  adapter_export.py  backend.py  bridge_runtime.py  client.py  compile_state.py  compile_workarounds.py  compiled_flex_attention.py  cute_grouped_lora_quack.py  flash_flex_dlse_patch.py  flex_attention.py  fp8.py  jobs.py  lora.py  megatron_patches.py  merge.py  merged_weight_export.py  model_chunks.py  offload.py  optimizer_state.py  param_name_canonicalization.py  prefix_tree.py  prefix_tree_packing.py  prefix_tree_state.py  provider.py  provider_common.py  routing_replay.py  routing_replay_pack.py  runtime_config.py  service.py  setup.sh  sft_batches.py  shared.py  shared_prefix_packing.py  shared_prefix_state.py  shared_prefix_tree.py  train.py  trainer_rank.py  (+2 more)
src/mp_actors/: move.py
tests/: __init__.py
tests/integration/: megatron_chat_template_rollout.py  megatron_forward_trace.py  megatron_hf_parity.py  megatron_hf_parity_worker.py  megatron_lora_coverage.py  megatron_merged_vllm_serving.py  megatron_native_vllm_lora.py  megatron_oracle_harness.py  megatron_oracle_worker.py  megatron_packed_position_ids.py  megatron_yes_no_trainability.py  test_lora_quack_cutover.py  test_megatron_hf_parity.py  test_megatron_hf_parity_invariants.py  test_megatron_lora_oracle_correctness.py  test_megatron_oracle_harness_invariants.py  test_megatron_packed_position_ids.py  test_megatron_provider_support.py  test_megatron_qwen35_lora_wrapping.py  test_provenance.py  test_push_and_fork.py  test_sft_last_assistant_tokenization.py  yes_no_trainability.py
tests/support/: chat_template_conformance_cases.py
tests/unit/: test_chat_template_config.py  test_convert_megatron_moe_lora.py  test_dedicated_config.py  test_dsv4_vllm_runtime_patches.py  test_frontend_logging.py  test_langgraph_llm_wrapper.py  test_langgraph_logging.py  test_local_backend_monitor.py  test_local_sft.py  test_lora_checkpoint.py  test_megatron_checkpointing.py  test_megatron_dedicated.py  test_megatron_flex_attention.py  test_megatron_jobs.py  test_megatron_merged_weight_export.py  test_megatron_model_support_discovery.py  test_megatron_model_support_handlers.py  test_megatron_model_support_registry.py  test_megatron_model_support_workflow.py  test_megatron_oracle_harness.py  test_megatron_param_name_canonicalization.py  test_megatron_provider_env.py  test_megatron_qwen_helpers.py  test_megatron_reference_logprobs.py  test_megatron_service_dedicated.py  test_megatron_sft_batches.py  test_megatron_train.py  test_megatron_train_runtime_modes.py  test_metric_routing.py  test_model_openai_client_costs.py  test_moe_routing_real_path.py  test_moe_routing_replay.py  test_moe_routing_replay_bundle_build.py  test_pipeline_trainer_batching.py  test_pipeline_trainer_local_backend.py  test_prefix_tree.py  test_prefix_tree_attention_builder.py  test_prefix_tree_grad_parity.py  test_prefix_tree_packing.py  test_preprocessing_tokenize.py  (+15 more)
typings/wandb/: __init__.pyi
vllm_runtime/: pyproject.toml  setup.sh
vllm_runtime/src/art_vllm_runtime/: __init__.py  dedicated_server.py  dsv4_patches.py  gemma4_moe_lora_patch.py  lora_delta.py  metrics.py  patches.py  policy_spans.py
(+342 files in other folders)
