[project]
name = "art-vllm-runtime"
version = "0.1.0"
description = "Tiny ART-owned vLLM runtime package"
requires-python = ">=3.12,<3.13"
dependencies = [
    "transformers==5.6.2",
    "vllm @ https://wheels.vllm.ai/ecd0b60aad2f4e28dd00ababfc1402690d88cbed/vllm-0.20.2rc1.dev168%2Bgecd0b60aa.cu129-cp38-abi3-manylinux_2_34_x86_64.whl ; sys_platform == 'linux'",
]

[project.scripts]
art-vllm-runtime-server = "art_vllm_runtime.dedicated_server:main"

[project.entry-points."vllm.general_plugins"]
art = "art_vllm_runtime.patches:apply_vllm_runtime_patches"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/art_vllm_runtime"]

[tool.hatch.build]
sources = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
required-version = ">=0.6.15"
override-dependencies = [
    "flashinfer-python==0.6.8.post1",
    "numpy<2",
    "torch @ https://download.pytorch.org/whl/test/cu128/torch-2.11.0%2Bcu128-cp312-cp312-manylinux_2_28_x86_64.whl",
    "torchaudio @ https://download.pytorch.org/whl/test/cu128/torchaudio-2.11.0%2Bcu128-cp312-cp312-manylinux_2_28_x86_64.whl",
    "torchvision @ https://download.pytorch.org/whl/test/cu128/torchvision-0.26.0%2Bcu128-cp312-cp312-manylinux_2_28_x86_64.whl",
    "transformers==5.6.2",
]
